# miniciv

./: Cargo.toml  README.md  auto_build.sh  build.sh  dev.sh  docker-compose.yml  nginx.conf  rustfmt.toml
front/: canvas.js  draw_cells.js  draw_links.js  draw_test.js  draw_trees.js  get_cell.js  get_link.js  get_tree.js  index.css  index.html  index.js  miniciv.js  miniciv_bg.wasm  test.js  update_stats.js  view.js
front/transition/: index.html  index.js
src/: cell.rs  lib.rs  link.rs  person.rs  point.rs  tree.rs  world.rs
tests/: web.rs
