[package]
name = "miniciv"
version = "0.1.0"
authors = ["Loïc Bourgois <loic@bourgois.pro>"]
edition = "2018"
license = "MIT"
repository = "miniciv"
description = "miniciv"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = "*"
getrandom = { version = "*", features = ["wasm_js"] }
rand = "*"
wasm-bindgen = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
